[gd_scene load_steps=10 format=2]

[ext_resource path="res://Itim/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ColorRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Current_Level.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/SaveCurrentGame.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" parent="." instance=ExtResource( 2 )]
margin_left = 2.70483
margin_top = 0.813068
margin_right = 1087.7
margin_bottom = 1924.81

[node name="TrainingButton" type="Button" parent="."]
margin_left = 43.6333
margin_top = 1312.0
margin_right = 625.633
margin_bottom = 1627.0
rect_scale = Vector2( 0.825304, 0.836384 )
custom_fonts/font = SubResource( 1 )
text = "Train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyItemsButton" type="Button" parent="."]
margin_left = 43.5828
margin_top = 1613.26
margin_right = 832.583
margin_bottom = 1865.26
rect_scale = Vector2( 0.611562, 1.02761 )
custom_fonts/font = SubResource( 1 )
text = "buy items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 566.175
margin_top = 1612.65
margin_right = 1355.17
margin_bottom = 1864.65
rect_scale = Vector2( 0.611562, 1.02761 )
custom_fonts/font = SubResource( 1 )
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestsButton" type="Button" parent="."]
margin_left = 563.805
margin_top = 1312.63
margin_right = 1163.8
margin_bottom = 1643.63
rect_scale = Vector2( 0.821479, 0.796722 )
custom_fonts/font = SubResource( 1 )
text = "quests"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 215.273
margin_top = 49.1708
margin_right = 881.273
margin_bottom = 188.171
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="Label" parent="CenterContainer"]
margin_right = 666.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
text = "John smith"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyNumberText" type="Label" parent="."]
margin_left = 429.372
margin_top = 160.34
margin_right = 1318.37
margin_bottom = 344.34
rect_scale = Vector2( 0.858205, 0.804673 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.945098, 1, 0.00784314, 1 )
text = "999999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StanimaText" type="Label" parent="."]
margin_left = 42.8371
margin_top = 1107.0
margin_right = 718.837
margin_bottom = 1291.0
rect_scale = Vector2( 0.687131, 0.675677 )
custom_fonts/font = SubResource( 3 )
text = "stanima:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StanimaNumber" type="Label" parent="StanimaText"]
margin_left = 703.203
margin_top = -4.34583
margin_right = 1379.2
margin_bottom = 179.654
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0.945098, 0.00392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightingText" type="Label" parent="."]
margin_left = 43.9116
margin_top = 986.678
margin_right = 757.912
margin_bottom = 1170.68
rect_scale = Vector2( 0.648855, 0.727018 )
custom_fonts/font = SubResource( 3 )
text = "fighting:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightingNumber" type="Label" parent="FightingText"]
margin_left = 744.081
margin_top = 0.326416
margin_right = 1458.08
margin_bottom = 184.326
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0.945098, 0.00392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DodgeText" type="Label" parent="."]
margin_left = 44.9597
margin_top = 890.142
margin_right = 758.96
margin_bottom = 1074.14
rect_scale = Vector2( 0.666711, 0.654833 )
custom_fonts/font = SubResource( 3 )
text = "dodging:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DodgeNumber" type="Label" parent="DodgeText"]
margin_left = 722.529
margin_top = -14.3192
margin_right = 1322.53
margin_bottom = 169.681
rect_scale = Vector2( 1.05465, 1.20732 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.917647, 0.945098, 0.00392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 4 )]
position = Vector2( -257.747, -764.765 )
scale = Vector2( 1.44053, 1.52715 )

[node name="Current_Level" parent="." instance=ExtResource( 5 )]
current_level = "Main_Menu"

[node name="SaveCurrentGame" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="TrainingButton" to="." method="_on_TrainingButton_pressed"]
[connection signal="pressed" from="BuyItemsButton" to="." method="_on_BuyItemsButton_pressed"]
[connection signal="pressed" from="QuestsButton" to="." method="_on_QuestsButton_pressed"]
